--- a/src/app/pages/cart/cart.page.html
+++ b/src/app/pages/cart/cart.page.html
@@ -2,7 +2,7 @@
   <app-header
     [pageTitle]="pageTitle"
     [cartBadgeCount]="cartBadgeCount"
-    [isLoggedIn]=true>
+    [isLoggedIn]="isLoggedIn">
   </app-header>
 </ion-header>
 <div *ngIf="!isEmptyCart && !isShowCartMinimum && !isShowCartAlert" class="checkout-div">
