--- a/src/app/pages/order/order.page.html
+++ b/src/app/pages/order/order.page.html
@@ -3,7 +3,7 @@
     <app-header
       [pageTitle]="pageTitle"
       [cartBadgeCount]="cartBadgeCount"
-      [isLoggedIn]=true>
+      [isLoggedIn]="isLoggedIn">
     </app-header>
   </ion-header>
 
