--- a/src/app/pages/payment/payment.page.html
+++ b/src/app/pages/payment/payment.page.html
@@ -21,7 +21,7 @@
       <ion-checkbox color="primary" checked slot="start" mode="md" style="margin-right: 10px; margin-left: 10px;" (ionChange)="onCheckboxChange($event)"></ion-checkbox>
     </ion-item>
   </ion-list>
-  <form class="form" [formGroup]="validationsform" (ngSubmit)="gotoPayment(validationsform.value)">
+  <form class="form" [formGroup]="validationsform" (ngSubmit)="submit(validationsform.value)">
     <ion-grid *ngIf="isShowForm">
       <ion-row class="ion-justify-content-center ion-align-items-center">
         <ion-col size='6'>
@@ -43,14 +43,14 @@
         <ion-col size="6">
           <ion-list class="line-input" mode="md"> 
             <ion-item mode="md" lines="none">
-              <ion-input placeholder="Address1*" formControlName="address1" readonly></ion-input>
+              <ion-input placeholder="Address1*" formControlName="address1"></ion-input>
             </ion-item> 
           </ion-list>  
         </ion-col>
         <ion-col size="6">
           <ion-list class="line-input" mode="md"> 
             <ion-item mode="md" lines="none">
-              <ion-input placeholder="Address2*" formControlName="address2" readonly></ion-input>
+              <ion-input placeholder="Address2*" formControlName="address2"></ion-input>
             </ion-item> 
           </ion-list>  
         </ion-col>      
@@ -59,14 +59,14 @@
         <ion-col size="8">
           <ion-list class="line-input" mode="md"> 
             <ion-item mode="md" lines="none">
-              <ion-input placeholder="City*" formControlName="city" readonly></ion-input>
+              <ion-input placeholder="City*" formControlName="city"></ion-input>
             </ion-item> 
           </ion-list>  
         </ion-col>
         <ion-col size="4">
           <ion-list class="line-input" mode="md"> 
             <ion-item mode="md" lines="none">
-              <ion-input placeholder="Zip code*" formControlName="zip" readonly></ion-input>
+              <ion-input placeholder="Zip code*" formControlName="zip"></ion-input>
             </ion-item> 
           </ion-list>  
         </ion-col>      
@@ -74,15 +74,39 @@
       <ion-row class="ion-justify-content-center ion-align-items-center">
         <ion-col size="5">
           <ion-list class="line-input" mode="md"> 
-            <ion-item mode="md" lines="none">
-              <ion-input placeholder="State*" formControlName="state" readonly></ion-input>
+            <ion-item mode="md" lines="none" *ngIf="isDropBoxForState">
+              <ion-select mode="md" style="width: 100%;" formControlName="state">
+                <div *ngFor="let item of stateList">
+                  <div *ngIf="deliveryAddressInfo.state && deliveryAddressInfo.state == item.value"> 
+                    <ion-select-option  [value]="item.value" selected>{{item.value}}</ion-select-option>
+                  </div>
+                  <div *ngIf="deliveryAddressInfo.state && deliveryAddressInfo.state != item.value"> 
+                    <ion-select-option  [value]="item.value">{{item.value}}</ion-select-option>
+                  </div>
+                </div>
+              </ion-select>  
+
             </ion-item> 
+            <ion-item mode="md" lines="none" *ngIf="!isDropBoxForState">
+              <ion-input placeholder="State*" formControlName="state"></ion-input>
+            </ion-item>  
           </ion-list>  
         </ion-col>
         <ion-col size="5">
           <ion-list class="line-input" mode="md"> 
             <ion-item mode="md" lines="none">
-              <ion-input placeholder="Country*" formControlName="country" readonly></ion-input>
+              <ion-select mode="md" style="width: 100%;" formControlName="country" (ionChange)="changeCountry($event)">
+                <div *ngFor="let item of countryList">
+                  <div *ngIf="deliveryAddressInfo.countrykey && deliveryAddressInfo.countrykey == item.id"> 
+                    <ion-select-option  [value]="item.id" selected>{{item.name}}</ion-select-option>
+                  </div>
+                  <div *ngIf="deliveryAddressInfo.countrykey && deliveryAddressInfo.countrykey != item.id"> 
+                    <ion-select-option  [value]="item.id">{{item.name}}</ion-select-option>
+                  </div>
+                </div>
+              </ion-select>  
+
+              <!-- <ion-input placeholder="Country*" formControlName="country"></ion-input> -->
             </ion-item> 
           </ion-list>  
         </ion-col>   
@@ -105,21 +129,26 @@
         </ion-col>   
         <ion-col size="2">&nbsp;</ion-col>   
       </ion-row> 
-      <ion-row class="ion-justify-content-center ion-align-items-center">
-        <ion-col class="ion-text-center">
-          <div class="all-address-div">
-            Your order will be delivered to: <span class="address-text"> {{all_addressText}}</span>
-          </div>
-        </ion-col>
-      </ion-row>              
+          
     </ion-grid>
-    <div class="button-div" >
-      <ion-button  class="button-proceed"  mode="ios" fill="solid"  expand="block"  (click)="back()">
-        <ion-icon name="arrow-back-outline"></ion-icon>&nbsp;&nbsp;Shipping details
-      </ion-button>      
-      <ion-button  class="button-proceed" type="submit" mode="ios" fill="solid"  expand="block"  [disabled]="!validationsform.valid">
-        Finalise Order&nbsp;&nbsp;<ion-icon name="arrow-forward-outline"></ion-icon>
-      </ion-button>
+    <div class="all-address-div">
+      Your order will be delivered to: <span class="address-text"> {{all_addressText}}</span>
+    </div>
+    <div class="button-div">
+      <ion-item lines="none">
+        <ion-label style="font-size: 14px;">I accepted the <a (click)="openWithSystemBrowser()">terms & conditions</a> and if paying by credit, authorise payment for back ordered items.</ion-label>
+        <ion-checkbox color="dark" slot="start" mode="md" style="margin-right: 10px; margin-left: 10px;" (ionChange)="onCheckTermsAccept($event)"></ion-checkbox>
+      </ion-item>  
+      <div *ngIf="!isAcceptedTerms">
+        <ion-button  class="button-proceed" type="submit" mode="ios" fill="solid"  expand="block" [disabled]="true">
+          Submit this order for AU ${{totalAmount | number:'1.2-2'}}
+        </ion-button>
+      </div> 
+      <div *ngIf="isAcceptedTerms">
+        <ion-button  class="button-proceed" type="submit" mode="ios" fill="solid"  expand="block" [disabled]="!validationsform.valid">
+          Submit this order for AU ${{totalAmount | number:'1.2-2'}}
+        </ion-button>
+      </div> 
     </div>
   </form>
 </ion-content>
