--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -2,7 +2,7 @@
   <app-header
     [pageTitle]="pageTitle"
     [cartBadgeCount]="cartBadgeCount"
-    [isLoggedIn]=true>
+    [isLoggedIn]="isLoggedIn">
   </app-header>
 </ion-header>
 <ion-content>
