--- a/src/app/pages/payment/payment.page.scss
+++ b/src/app/pages/payment/payment.page.scss
@@ -64,7 +64,10 @@ ion-title{
     border-radius: 5px;
     display: flex;
     align-items: center;
-    padding-left: 10px;
+    padding-left: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
     font-size: 14px;
 }
 .address-text{
@@ -75,19 +78,16 @@ ion-title{
 }
 .button-div{
     width: '100%';
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 20px;
+    justify-content: center;
+    margin-top: 20px;
 }
 .button-proceed{
    // width: '60%';
     height: 60px;
-    font-size: 1.2em;
-    font-weight: 500;
+    font-size: 27px;
+    font-weight: 600;
     margin: 0 !important;
-    margin-top: 10px !important;
-    --background: hsl(198, 35%, 58%);
+    --background: #4bb716;
     --background-activated : #e2f1e4;
     --color: white;
     --border-color : white;
