--- a/src/app/pages/shipping-address/shipping-address.page.scss
+++ b/src/app/pages/shipping-address/shipping-address.page.scss
@@ -71,26 +71,29 @@ ion-item{
 }
 .button-div{
     width: '100%';
-    justify-content: center;
+    display: flex;
+    flex-direction: row;
+
+    justify-content: flex-end;
     margin-top: 10px;
 }
-.button-proceed{
-   // width: '60%';
-    height: 60px;
-    font-size: 27px;
-    font-weight: 600;
-    margin: 0 !important;
-    --background: #4bb716;
-    --background-activated : #e2f1e4;
-    --color: white;
-    --border-color : white;
-    --border-style: solid;
-    --border-width: 1px;
-    --border-radius: 5px;
-    ion-icon{
-        font-size: 1.2em;
-    }
-}
+// .button-proceed{
+//    // width: '60%';
+//     height: 60px;
+//     font-size: 27px;
+//     font-weight: 600;
+//     margin: 0 !important;
+//     --background: #4bb716;
+//     --background-activated : #e2f1e4;
+//     --color: white;
+//     --border-color : white;
+//     --border-style: solid;
+//     --border-width: 1px;
+//     --border-radius: 5px;
+//     ion-icon{
+//         font-size: 1.2em;
+//     }
+// }
 .clipboardIcon{
     color: #66bb6a; 
     padding-right: 10px; 
@@ -98,3 +101,21 @@ ion-item{
     font-size: 3em; 
     float: left
 }
+.button-proceed{
+    // width: '60%';
+     height: 60px;
+     font-size: 1.2em;
+     font-weight: 500;
+     margin: 0 !important;
+     margin-top: 10px !important;
+     --background: hsl(198, 35%, 58%);
+     --background-activated : #e2f1e4;
+     --color: white;
+     --border-color : white;
+     --border-style: solid;
+     --border-width: 1px;
+     --border-radius: 5px;
+     ion-icon{
+         font-size: 1.2em;
+     }
+ }
