--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -48,3 +48,29 @@ ion-title{
         background: white;
     }
 }
+.button-div{
+    width: '100%';
+    display: flex;
+    flex-direction: row;
+
+    justify-content: flex-end;
+    margin-top: 10px;
+}
+.button-proceed{
+    // width: '60%';
+     height: 60px;
+     font-size: 1.2em;
+     font-weight: 500;
+     margin: 0 !important;
+     margin-top: 10px !important;
+     --background: #7dcf85;
+     --background-activated : #e2f1e4;
+     --color: white;
+     --border-color : white;
+     --border-style: solid;
+     --border-width: 1px;
+     --border-radius: 5px;
+     ion-icon{
+         font-size: 1.2em;
+     }
+ }
