--- a/src/app/pages/special/special.page.html
+++ b/src/app/pages/special/special.page.html
@@ -12,14 +12,14 @@
   <div *ngIf="isLoading" class="loading-div">
     <ion-spinner name="bubbles"></ion-spinner>
   </div>
-  <ion-grid *ngIf="!isLogined" class="ion-padding">
+  <ion-grid *ngIf="!isLoggedIn" class="ion-padding">
     <ion-row class="ion-justify-content-center ion-align-items-center">
       <ion-col size="12" class="ion-text-center">
         This content only available to logged in, approved members.
       </ion-col>
     </ion-row>
   </ion-grid>
-  <ion-grid *ngIf="img_dir != '' && isLogined && !isLoading">
+  <ion-grid *ngIf="img_dir != '' && isLoggedIn && !isLoading">
     <ion-row>
       <ion-col *ngFor="let item of productList; let productIndex = index" size="4">
         <ion-card>
