--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -50,6 +50,11 @@ ion-title{
     --border-width: 1px;
 }
 .footer-label{
-    color: grey; 
-    font-size: 11pt;
+    color: rgb(70, 69, 69); 
+    font-size: 12pt;
+}
+.description_signup{
+    color: #313131;
+    font-size: 16px;
+    line-height: 1.5;
 }
