--- a/src/app/pages/signup-first/signup-first.page.html
+++ b/src/app/pages/signup-first/signup-first.page.html
@@ -1,6 +1,6 @@
 <ion-header mode="ios">
   <ion-toolbar class="toolbar">
-    <ion-title>Delivery Details</ion-title>
+    <ion-title>Before we begin</ion-title>
     <ion-buttons slot="start">
       <ion-button (click)="back();">
         <ion-icon name="arrow-back-outline" style="font-size: 38px;" color="primary"></ion-icon>
@@ -25,8 +25,8 @@
       </ion-col>
     </ion-row>
     <ion-row class="ion-padding">
-      <ion-col size="10">&nbsp;</ion-col>
-      <ion-col size="2">
+      <ion-col size="9">&nbsp;</ion-col>
+      <ion-col size="3">
         <ion-button  class="button-next" mode="ios" fill="solid"  expand="block" (click)="next();">
           Next&nbsp;&nbsp;<ion-icon name="arrow-forward-outline"></ion-icon>
         </ion-button>
