--- a/src/app/pages/signup-second/signup-second.page.html
+++ b/src/app/pages/signup-second/signup-second.page.html
@@ -99,7 +99,7 @@
       <ion-row class="ion-padding">
         <ion-col size="9">&nbsp;</ion-col>
         <ion-col size="3">
-          <ion-button  class="button-next" mode="ios" fill="solid"  expand="block" (click)="next();">
+          <ion-button  class="button-next" mode="ios" fill="solid" type="submit" expand="block" [disabled]="!validationsform.valid">
             Next&nbsp;&nbsp;<ion-icon name="arrow-forward-outline"></ion-icon>
           </ion-button>
         </ion-col>
