--- a/src/app/pages/signup-third/signup-third.page.scss
+++ b/src/app/pages/signup-third/signup-third.page.scss
@@ -1,4 +1,3 @@
-
 ion-title{
     letter-spacing: 0.1em; 
     font-size: larger;
@@ -9,20 +8,11 @@ ion-title{
     justify-content: center; 
     display: flex;
 }
-h1{
-    font-size: 32px;
-    color: #d34745;
-}
-.logo-img{
-    width: 250px;
-    height: 150px;
-}
 .line-input {
     margin-bottom: 0!important;
     margin-top: 0!important;
     background: transparent;
     border-radius: 10px;
-    
     p {
         margin: 0;
         padding: 0;
@@ -36,13 +26,13 @@ h1{
         --background: transparent;
         border: 1px solid #807e7e;
         border-radius: 10px;
-        height: 60px;
+
         &.item-has-focus {
             border: 1px solid rgb(34, 34, 34);
         }
         ion-input {
             color: rgb(34, 34, 34); /* input text color to primary */
-            height: 60px;
+            
         }
 
         ion-label {
@@ -52,34 +42,34 @@ h1{
         }
 
         ion-icon{
-            color: grey !important;
+            color: #ffffff !important;
             margin-right: 8px !important;
         }
     }
 }
+.button-div{
+    width: '100%';
+    display: flex;
+    flex-direction: row;
 
-.button-login{
-    height: 60px;
-    font-size: 18px;
-    font-weight: bold !important;
-    margin: 0 !important;
-    margin-top: 10px !important;
-    text-transform: uppercase !important;
-    --border-radius: 10px;
-    --background: #407084;
-    --color: white;
-    --color-activated: white;
-    --background-activated : #e76b6b;
-    --border-color : white;
-    --border-style: solid;
-    --border-width: 1px;
+    justify-content: flex-end;
+    margin-top: 10px;
 }
-.footer-label{
-    color: rgb(70, 69, 69); 
-    font-size: 12pt;
-}
-.description{
-    color: #313131;
-    font-size: 20px;
-    line-height: 1.5;
-}
+.button-next{
+    // width: '60%';
+     height: 60px;
+     font-size: 1.2em;
+     font-weight: 500;
+     margin: 0 !important;
+     margin-top: 10px !important;
+     --background: hsl(198, 35%, 58%);
+     --background-activated : #e2f1e4;
+     --color: white;
+     --border-color : white;
+     --border-style: solid;
+     --border-width: 1px;
+     --border-radius: 5px;
+     ion-icon{
+         font-size: 1.2em;
+     }
+ }
