--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -5,13 +5,13 @@
     [isLoggedIn]="isLoggedIn">
   </app-header>
 </ion-header>
-<ion-content>
+<ion-content [fullscreen]="true" >
 
   <ion-grid class="ion-no-padding" *ngIf="!isUpdating">
-    <ion-row class="ion-justify-content-center ion-align-items-center">
+    <ion-row class="ion-justify-content-center ion-align-items-center" [ngStyle]="{'height': rowHeight}">
       <ion-col size="12" class="ion-text-center">
         <ion-slides pager="true" [options]="slideOpts">
-          <ion-slide *ngFor="let item of homeSliders; let i = index">
+          <ion-slide *ngFor="let item of homeSliders; let i = index" [ngStyle]="{'height': rowHeight}">
             <div class="slide-center-image" [ngStyle]="{'background-image':'url('+ img_dir + item.name +')'}">
               <div class="slide-center-bg">
                 <div class="slide-center-text">
@@ -27,23 +27,30 @@
     </ion-row>
     <ion-row class="ion-justify-content-center ion-align-items-center">
       <ion-col size="12" class="ion-text-center">
-        <div class="home-section">
-          <div class="home-section1-bg">
+        <div class="home-section" [ngStyle]="{'height': rowButtonSectionHeight}">
+          <div class="home-section1-bg" [ngStyle]="{'height': rowButtonSectionHeight}">
             <ion-button expand="block" fill="outline" class="btn-item" [routerLink]="['/special']">VIEW SALE ITEMS</ion-button>
           </div>
         </div>
-        <div class="home-section">
-          <div class="home-section2-bg">
-            <ion-button expand="block" fill="outline" class="btn-item" [routerLink]="['/new-arrival']">NEW ARRIVALS</ion-button>
-          </div>
-        </div>   
-        <div class="home-section">
-          <div class="home-section1-bg">
-            <ion-button expand="block" fill="outline" class="btn-item" [routerLink]="['/clearance']">VIEW CLEARANCE ITEMS</ion-button>
-          </div>
-        </div>               
       </ion-col>
     </ion-row>
+    <ion-row class="ion-justify-content-center ion-align-items-center">
+      <ion-col size="12" class="ion-text-center">
+        <div class="home-section" [ngStyle]="{'height': rowButtonSectionHeight}">
+          <div class="home-section2-bg" [ngStyle]="{'height': rowButtonSectionHeight}">
+            <ion-button expand="block" fill="outline" class="btn-item" [routerLink]="['/new-arrival']">NEW ARRIVALS</ion-button>
+          </div>
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row class="ion-justify-content-center ion-align-items-center">
+      <ion-col size="12" class="ion-text-center">
+        <div class="home-section" [ngStyle]="{'height': rowButtonSectionHeight}">
+          <div class="home-section1-bg" [ngStyle]="{'height': rowButtonSectionHeight}">
+            <ion-button expand="block" fill="outline" class="btn-item" [routerLink]="['/clearance']">VIEW CLEARANCE ITEMS</ion-button>
+          </div>
+        </div>
+      </ion-col>
+    </ion-row>    
   </ion-grid>
-
 </ion-content>
