--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,7 +1,5 @@
 
-ion-slides {
-    height: 500px;
-}
+
 
 ion-img{
     width: 80px;
@@ -10,11 +8,11 @@ ion-img{
 .home-section{
     background-color: #70a1b6;
     width: 100%;
-    height: 150px;
+    //height: 150px;
 }
 .home-section1-bg{
     width: 100%;
-    height: 150px;
+    //height: 150px;
     background: rgba(0, 0, 0, 0.2);
     padding: 15px;
     align-items: center;
@@ -32,8 +30,8 @@ ion-img{
     display: flex;
 }
 .btn-item{
-    width: 60%;
-    height: 70px;
+    width: 80%;
+    height: 80px;
     color: white;
     --border-color: white;
     font-size: large;
