--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -7,7 +7,7 @@
 </ion-header>
 <ion-content [fullscreen]="true" >
 
-  <ion-grid class="ion-no-padding" *ngIf="!isUpdating">
+  <ion-grid class="ion-no-padding">
     <ion-row class="ion-justify-content-center ion-align-items-center" [ngStyle]="{'height': rowHeight}">
       <ion-col size="12" class="ion-text-center">
         <ion-slides pager="true" [options]="slideOpts">
