--- a/src/app/pages/product-detail/product-detail.page.html
+++ b/src/app/pages/product-detail/product-detail.page.html
@@ -6,41 +6,50 @@
         </ion-button>
     </ion-buttons>
     <ion-title *ngIf="product">{{product.productName}}</ion-title>
-    <ion-buttons slot="end">
+    <!-- <ion-buttons slot="end">
       <ion-button (click)="openMenu()" slot="start">
         <ion-icon name="menu" style="font-size: 38px;"></ion-icon>
       </ion-button>
-    </ion-buttons>
+    </ion-buttons> -->
   </ion-toolbar>
   
 </ion-header>
 
 <ion-content *ngIf="product">
   <ion-grid>
-    <ion-row>
+    <ion-row class="ion-justify-content-center ion-align-items-center">
       <ion-col *ngIf="product.image.length > 1">
         <ion-slides pager="true" [options]="slideOpts" mode="ios">
           <ion-slide *ngFor="let productImage of product.image; let i = index">
-            <div
+            <!-- <div
               class="product-image"
               [ngStyle]="{'background-image':'url('+ img_dir + productImage.name +')'}"
               (click)="gotoDetail(item)">
 
-          </div>
+          </div> -->
+          <ion-img [src]="img_dir + productImage.name" (click)="gotoDetail(item)"></ion-img>
           </ion-slide>
         </ion-slides>        
       </ion-col>
       <ion-col *ngIf="product.image.length == 1">
-        <ion-img [src]="img_dir + product.image[0].name"></ion-img>
+        <div class="product-image">
+          <ion-img [src]="img_dir + product.image[0].name"></ion-img>
+        </div>
       </ion-col>
     </ion-row>
-    <ion-row >
+    <ion-row style="margin-top: 50px;">
       <ion-col size="6" class="ion-text-center " >
         <p><span><strong>Code:</strong> {{product.productCode}}</span></p>
         <p><span><strong>Size:</strong> {{product.productDimension}}</span></p>
         <p><span><strong>Min order quantity:</strong> {{product.productMinQty}}</span></p>
-        <div><svg  class="barcode" jsbarcode-format="EAN-13" #barCode></svg></div>
-        <div class="price-text">${{product.productPrice}}</div>
+        <!-- <div><svg  class="barcode" jsbarcode-format="EAN-13" #barCode></svg></div> -->
+        <div class="price-text">${{product.bulkPrice | number:'1.2-2'}}</div>
+        <div
+          class="product-bulk-div"
+          *ngIf="product.productPriceSlab > 0 && product.productQtySlab > 0"
+        >
+        Buy {{product.productQtySlab}} @ ${{product.productPriceSlab | number:'1.2-2'}}
+      </div> 
       </ion-col>
       <ion-col size="6" class="ion-text-center">
         <p><strong>Packaging:</strong> </p>
@@ -49,13 +58,32 @@
         <p>Width: {{product.productWidth}}cm</p>
         <p>Height: {{product.productHeight}}cm</p>
         <p>Carton Qty: {{product.productCartonQty}}</p>
-        <ion-button  class="button-addcart" mode="ios" fill="solid" expand="full">
+
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="6">
+        <ion-select
+          placeholder="{{product.placeholder_qty}}"
+          interface="popover"
+          mode="ios"
+          [interfaceOptions]="{'cssClass': 'price-popover'}"
+          (ionChange)="changePrice($event)"
+        >
+          <ion-select-option
+            *ngFor="let qty of product.qty_dropdownList"
+            [value]="qty"
+            >{{qty}}</ion-select-option
+          >
+        </ion-select>
+      </ion-col>
+      <ion-col size="6">
+        <ion-button  class="button-addcart" mode="ios" fill="solid" expand="full" (click)="addToCart(product)">
           Add To Cart
         </ion-button>
       </ion-col>
-   
     </ion-row>
-    <ion-row>
+    <!-- <ion-row>
       <ion-col size="12" class="ion-padding-start ion-padding-end">
         <p><strong>Important Information:</strong> </p>
         <p *ngIf="product.productImportantInfo != 'NULL'"><span class="description">{{product.productImportantInfo}}</span></p>
@@ -72,7 +100,7 @@
         <p><strong>Description:</strong> </p>
         <p *ngIf="product.productDescription != 'NULL'"><span class="description">{{product.productDescription}}</span></p>
       </ion-col>
-    </ion-row>       
+    </ion-row>        -->
   </ion-grid>
 
 </ion-content>
