--- a/src/app/pages/product-detail/product-detail.page.scss
+++ b/src/app/pages/product-detail/product-detail.page.scss
@@ -3,7 +3,8 @@ ion-title{
     font-size: larger;
 }
 ion-img{
-    height: 400px;
+    width: 350px;
+    height: 350px;
 }
 p{
     font-size: larger;
@@ -13,7 +14,7 @@ p{
 .price-text{
     font-size: 36px;
     color: gray;
-    
+    margin-top: 20px;
 }
 .description{
     font-size:medium;
@@ -29,8 +30,40 @@ p{
     margin-top: 20px;
 }
 .product-image{
-    background-size: cover;
-    background-position: center;
     width: 100%;
-    height: 400px;
+    height: 350px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.product-bulk-div{
+    width: 50%;
+    height: 40px;
+    text-align: center;
+    border: 1px dashed #de8913;
+    font-size: 16px;
+    font-weight: 500;
+    color: gray;
+    border-radius: 2px;
+    background-color: #f0f391;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+}
+::ng-deep .price-popover
+{
+  --width: 100px;
+  --max-width: 400px;
+  --max-height: 300px;
+}
+ion-select{
+    border: 1px solid #807e7e;
+    height: 40px;
+    width: 40%;
+    margin: auto;
+    margin-top: 20px;
+    color: #1f1f1f;
+    --placeholder-opacity: 1 !important;
 }
