--- a/src/app/pages/customer/customer.page.html
+++ b/src/app/pages/customer/customer.page.html
@@ -1,7 +1,7 @@
 <ion-header mode="ios">
   <ion-toolbar style="height: 80px; align-items: center; justify-content: center; display: flex;">
     <ion-title>My Customers</ion-title>
-    <ion-buttons slot="end">
+    <ion-buttons slot="start">
       <ion-button (click)="openMenu()" slot="start">
         <ion-icon name="menu" style="font-size: 38px;"></ion-icon>
       </ion-button>
@@ -12,13 +12,17 @@
 
 <ion-content class="ion-padding">
   <ion-list >
-    <ion-item *ngFor="let item of customer_sectionlist">
+    <ion-item *ngFor="let item of customerlist">
       <ion-label>{{item.company}}</ion-label>
       <ion-button *ngIf="this.loginedUser.id != item.customerId" slot="end" (click)="login(item.customerId)">Login</ion-button>
     </ion-item>
   </ion-list>
-  <ion-button *ngIf="customerlist.length > 0" class="loadmore-btn" mode="ios" fill="solid" size="default" shape="round" expand="block" (click)="loadMore()">
-    Load More
-  </ion-button>
+  <ion-infinite-scroll (ionInfinite)="loadMore($event)">
+    <ion-infinite-scroll-content
+      loadingSpinner="bubbles"
+      loadingText="Loading more data..."
+    >
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 
 </ion-content>
