--- a/src/app/components/app-header/app-header.component.html
+++ b/src/app/components/app-header/app-header.component.html
@@ -8,7 +8,7 @@
     </ion-buttons>
     <ion-badge id="cart-badge" color="success">{{cartBadgeCount}}</ion-badge>
   </div>
-  <ion-buttons slot="end" >
+  <!-- <ion-buttons slot="end" >
     <ion-button (click)="openLoginModal();" slot="start" *ngIf="!isLoggedIn">
       <ion-icon name="person-circle-outline" style="font-size: 38px;"></ion-icon>
       Login
@@ -16,7 +16,7 @@
     <ion-button (click)="logout();" slot="start" *ngIf="isLoggedIn">
       <ion-icon name="power-outline" style="font-size: 38px;"></ion-icon>
     </ion-button>      
-  </ion-buttons>
+  </ion-buttons> -->
 
   <ion-buttons slot="start">
     <ion-button (click)="openMenu()" slot="start">
