--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,13 @@
               </ion-item>
             </ion-list>
           </ion-menu-toggle>
-      
+          <ion-menu-toggle auto-hide="false">
+            <ion-item (click)="logout()">
+              <ion-label>Logout</ion-label>
+              <!-- <ion-icon slot="start" name="power-outline"></ion-icon> -->
+            </ion-item>  
+          </ion-menu-toggle>
+    
       </ion-content>
     </ion-menu>
     <ion-router-outlet [swipeGesture]="false" mode="md" id="main-content"></ion-router-outlet>
