--- a/src/app/components/app-header/app-header.component.scss
+++ b/src/app/components/app-header/app-header.component.scss
@@ -14,10 +14,12 @@ ion-title{
     align-items: center; 
     justify-content: center; 
     display: flex;
+    padding-right: 10px;
  }
  
  #cart-badge {
     position: absolute;
     top: 15px;
-    right: -10px;
+    right: -5px;
+    margin-right: 10px;
  }
