--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -22,7 +22,7 @@
         <h1>This is a wholesale only site </h1>
         <p class="description"> Access to pricing is strictly available to <br>
           approved wholesale customers only. <br>
-          <a (click)="gotoSignup()"><span style="font-size: 22px;">Click here</span> </a>  to submit your registration request. 
+          <!-- <a (click)="gotoSignup()"><span style="font-size: 22px;">Click here</span> </a>  to submit your registration request.  -->
         </p>
       </ion-col>
     </ion-row>    
